force-app/main/default/objects/clofor_com_cfs__WMSBillPayReq__c/fields/clofor_com_cfs__CashID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH ID</label>
    <referenceTo>clofor_com_cfs__CASH_BOOK__c</referenceTo>
    <relationshipLabel>WMS BILL+TRX PLAN</relationshipLabel>
    <relationshipName>WMSBillTrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>