force-app/main/default/objects/clofor_com_cfs__WMSBillPayReq__c/fields/clofor_com_cfs__UnpaidBalanceOfBuyingLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfBuyingLocalFormula__c</fullName>
    <formula>clofor_com_cfs__WMSBillID__r.clofor_com_cfs__UnpaidBalanceOfBuyingLocal__c</formula>
    <label>UNPAID BALANCE OF BUYING(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>