force-app/main/default/objects/clofor_com_cfs__WMSBillPayReq__c/fields/clofor_com_cfs__UnreceiveBalOfSellingUSDFormul__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceiveBalOfSellingUSDFormul__c</fullName>
    <formula>clofor_com_cfs__WMSBillID__r.clofor_com_cfs__UnreceivedBalanceUSD__c</formula>
    <label>UNRECEIVED BAL OF SELLING(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>