force-app/main/default/objects/clofor_com_cfs__WMSBillPayReq__c/fields/clofor_com_cfs__WMSBillID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSBillID__c</fullName>
    <label>WMS BILL ID</label>
    <referenceTo>clofor_com_cfs__Billing__c</referenceTo>
    <relationshipName>WMSBillPayReq</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>