force-app/main/default/objects/clofor_com_cfs__WMSBillPayReq__c/fields/clofor_com_cfs__WMSUnpaidBalOfBuyingLocalPayReq__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSUnpaidBalOfBuyingLocalPayReq__c</fullName>
    <label>WMS UNPAID BAL OF BUYING(LOCAL)-PAY REQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>